--- a/html/ui/index.html
+++ b/html/ui/index.html
@@ -241,6 +241,9 @@
                             <div id="login_error" style="max-width:400px;min-width:400px;display:none">
                                 <div class="callout callout-danger"></div>
                             </div>
+                            <div id="ledger_login_link">
+                                <a href="#" onclick="NRS.ledgerLogin();">Login with Ledger Nano S</a>
+                            </div>
                             <div class="lockscreen-item">
                                 <div class="lockscreen-credentials">
                                     <div class="input-group">
@@ -256,7 +259,7 @@
                                 <input type="checkbox" name="remember_password" id="remember_password" value="1" /> <label for="remember_password" data-i18n="remember_passphrase_during_session">Remember passphrase on local computer</label>
                             </div>
                             <div id="registration_link">
-                                <a href="#" onclick="NRS.registerAccount();" data-i18n="no_account_q_create_account">Don't have an account? Click here to create one!</a>
+                                <a href="#" onclick="NRS.registerAccount();" data-i18n="no_account_q_create_account">Don't have an account? Click here to create one!</a>                               
                             </div>
                         </div>
                         <div class="panel panel-default" id="welcome_panel" style="display:none;max-width:500px;">
@@ -5639,39 +5642,45 @@
                 </div>
             </div>
             <div class="modal fade" id="raw_transaction_modal" tabindex="-1" role="dialog" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                            <h4 class="modal-title" data-i18n="raw_transaction_details">Raw Transaction Details</h4>
-                        </div>
-                        <div class="modal-body">
-                            <label data-i18n="unsigned_transaction_bytes">UNSIGNED TRANSACTION BYTES</label>
-                            <div class="form-group">
-                                <textarea class="form-control" id="raw_transaction_modal_unsigned_transaction_bytes" rows="4"></textarea>
+                <form role="form" id="raw_transaction_form" autocomplete="off">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                <h4 class="modal-title" data-i18n="raw_transaction_details">Raw Transaction Details</h4>
                             </div>
-                            <label data-i18n="signed_transaction_bytes">SIGNED TRANSACTION BYTES</label>
-                            <div class="form-group">
-                                <textarea class="form-control" id="raw_transaction_modal_transaction_bytes" rows="4"></textarea>
-                            </div>
-                            <div id="raw_transaction_modal_full_hash_container">
-                                <label data-i18n="full_transaction_hash">FULL TRANSACTION HASH</label>
+                            <div class="modal-body">
+                                <div class="callout callout-danger error_message" style="display:none"></div>
+                                <label data-i18n="unsigned_transaction_bytes">UNSIGNED TRANSACTION BYTES</label>
                                 <div class="form-group">
-                                    <textarea class="form-control" id="raw_transaction_modal_full_hash" rows="1"></textarea>
+                                    <textarea class="form-control" id="raw_transaction_modal_unsigned_transaction_bytes" rows="4"></textarea>
+                                </div>
+                                <label data-i18n="signed_transaction_bytes">SIGNED TRANSACTION BYTES</label>
+                                <div class="form-group">
+                                    <textarea class="form-control" name="transactionBytes" id="raw_transaction_modal_transaction_bytes" rows="4"></textarea>
+                                </div>
+                                <div id="raw_transaction_modal_full_hash_container">
+                                    <label data-i18n="full_transaction_hash">FULL TRANSACTION HASH</label>
+                                    <div class="form-group">
+                                        <textarea class="form-control" id="raw_transaction_modal_full_hash" rows="1"></textarea>
+                                    </div>
+                                </div>
+                                <div id="raw_transaction_modal_signature_hash_container">
+                                    <label data-i18n="signature_hash">SIGNATURE HASH</label>
+                                    <div class="form-group">
+                                        <textarea class="form-control" id="raw_transaction_modal_signature_hash" rows="1"></textarea>
+                                    </div>
                                 </div>
                             </div>
-                            <div id="raw_transaction_modal_signature_hash_container">
-                                <label data-i18n="signature_hash">SIGNATURE HASH</label>
-                                <div class="form-group">
-                                    <textarea class="form-control" id="raw_transaction_modal_signature_hash" rows="1"></textarea>
-                                </div>
+                            <div class="modal-footer" style="margin-top:0;">
+                                <input type="hidden" name="request_type" value="broadcastTransaction"/>
+                                <button type="button" class="btn btn-default" onclick="NRS.ledgerSign()">Sign with Ledger</button>                         
+                                <button type="button" class="btn btn-primary" id="raw_transaction_modal_broadcast_button" data-loading-text="Submitting...">Broadcast Transaction</button>
+                                <button type="button" class="btn btn-default" data-dismiss="modal" data-i18n="close">Close</button>
                             </div>
-                        </div>
-                        <div class="modal-footer" style="margin-top:0;">
-                            <button type="button" class="btn btn-primary" data-dismiss="modal" data-i18n="close">Close</button>
                         </div>
                     </div>
-                </div>
+                </form>
             </div>
             <div class="modal fade modal-no-hide" id="transaction_operations_modal" tabindex="-1" role="dialog" aria-hidden="true">
                 <div class="modal-dialog">
@@ -6024,6 +6033,7 @@
         <script src="js/3rdparty/pako.js" type="text/javascript"></script>
         <script src="js/3rdparty/maskedinput.js" type="text/javascript"></script>
         <script src="js/3rdparty/qrcode.js" type="text/javascript"></script>
+        <script src="js/3rdparty/ledger.min.js" type="text/javascript"></script>
         <script src="js/util/extensions.js" type="text/javascript"></script>
         <script src="js/util/converters.js" type="text/javascript"></script>
         <script src="js/util/nxtaddress.js" type="text/javascript"></script>
